VEIIA-41 added ability to signin and signup
