# internal/domain/core/requests.go
@@ -14,5 +14,4 @@ type UserSignInRequest struct {
 
 type UserLogOutRequest struct {
 	Username string `json:"username" binding:"required"`
-	Password string `json:"password" binding:"required"`
 }
